--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -74,3 +74,7 @@
         @apply bg-background text-foreground;
     }
 }
+
+.code-span {
+    @apply mx-1 p-1 bg-gray-100 border-[0.5px] border-gray-200 font-mono rounded text-[15px] text-gray-700;
+}
